--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,13 +30,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'androidx.navigation:navigation-fragment:2.2.2'
-    implementation 'androidx.navigation:navigation-ui:2.2.2'
+    implementation 'androidx.navigation:navigation-fragment:2.3.0'
+    implementation 'androidx.navigation:navigation-ui:2.3.0'
 
     //Silder
-    implementation 'com.github.smarteist:autoimageslider:1.3.2-appcompat'
+    implementation 'com.github.smarteist:autoimageslider:1.3.8'
 
-    implementation 'com.google.android.material:material:1.2.0-alpha03'
+    implementation 'com.google.android.material:material:1.3.0-alpha01'
 
 
     //Circle Image
@@ -51,7 +51,6 @@ dependencies {
     implementation 'com.nex3z:toggle-button-group:1.2.0'
 
     implementation 'com.github.fornewid:neumorphism:0.1.11'
-
 
 
 }
